<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="166dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_name"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/et_bg"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_email"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_pw"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_check_pw"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="@string/et_input_check_pw"
            android:inputType="textPassword"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_pw" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_check_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_check_pw"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_check_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>