<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_corner"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="64dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bottom_sheet_stick" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/category"
            android:textColor="@color/grey_555555"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <LinearLayout
            android:id="@+id/lay_all_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:src="@drawable/iv_all_check"
                app:layout_constraintEnd_toStartOf="@+id/appCompatTextView3"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_all_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_all"
                android:textColor="@color/grey_555555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_snack"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_snack"
            android:gravity="center"
            android:text="분식"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cafe"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_cafe"
            android:gravity="center"
            android:text="카페ㆍ디저트"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_hamburger"
            app:layout_constraintStart_toEndOf="@+id/tv_snack"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hamburger"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_fast_food"
            android:gravity="center"
            android:text="패스트푸드"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_korean"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_korean"
            android:gravity="center"
            android:text="한식"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_snack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_chinese"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_chinese"
            android:gravity="center"
            android:text="중식"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_japanese"
            app:layout_constraintStart_toEndOf="@+id/tv_korean"
            app:layout_constraintTop_toBottomOf="@+id/tv_cafe" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_japanese"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/category_pressed"
            android:drawableTop="@drawable/iv_selector_japanese"
            android:gravity="center"
            android:text="일식"
            android:textColor="@color/grey_555555"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hamburger" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_price"
            android:textColor="@color/grey_555555"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_pay"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:stepSize="5000.0"
            android:valueFrom="0.0"
            android:valueTo="20000.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price"
            app:values="@array/initial_slider_values" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_0won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_0won"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_2man_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_2man_won"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey_E9E9E9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chinese" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>